# times-tables

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISH.md  README.md  VENDORING.md  austimes-github-action-diff-report.yml  main.py  pyproject.toml  test.html
.beads/: beads.left.jsonl  beads.left.meta.json
.github/workflows/: ci.yml  release.yml
docs/: AusTIMES_VEDA_CLI_PRD.txt  tables_index_schema.md
examples/: README.md  sample_deck
examples/shadow_output/meta/: tables_index.json
src/austimes_tables/: __init__.py  canonicalize.py  cli.py  csvio.py  excel.py  extract.py  ids.py  index.py  models.py  scanner.py  sorting.py
src/austimes_tables/commands/: __init__.py  diff.py  extract.py  format.py  report.py  update.py  validate.py
src/austimes_tables/static/: daff.js
src/times_tables/: __init__.py  canonicalize.py  cli.py  excel.py  extract.py  index.py  models.py  scanner.py  veda.py
src/times_tables/commands/: __init__.py  diff.py  diff_commits.py  extract.py  format.py  (+2 more)
tests/: __init__.py  test_canonicalize.py  test_csv_determinism.py  test_diff.py  test_excel.py  test_extract.py  test_extraction_edge_cases.py  test_format.py  test_ids.py  test_index.py  test_integration_extract.py  test_report.py  test_scanner.py  test_sorting.py  test_validate.py  test_veda.py
tests/fixtures/: FIXTURE_SUMMARY.md  README.md  __init__.py  example_usage.py  expected_tables.json  generate_fixtures.py  verify_fixtures.py
tests/golden/: README.md  quote_minimal.csv  simple_sorted.csv  with_nulls.csv  with_unicode.csv
(+6 files in other folders)
