[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "austimes-tables"
version = "0.3.1"
description = "Git-friendly CLI for extracting, validating, and diffing VEDA-TIMES input tables"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AusTIMES Contributors"}
]
keywords = ["veda", "times", "energy-modeling", "excel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "rich>=14.2.0",
    "rich-argparse>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
times-tables = "austimes_tables.cli:main"
austimes-tables = "austimes_tables.cli:main"  # Deprecated alias

[tool.hatch.build.targets.wheel]
packages = ["src/austimes_tables"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.rye]
dev-dependencies = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
